# Branchy-Rust

./: .dockerignore  .gitignore  .rustfmt.toml  ANALYSIS_RECOMMENDATIONS.md  Cargo.toml  Dockerfile.backend  Dockerfile.coverage  Dockerfile.gateway  README.md  build.ps1  check-format.ps1  deploy.ps1  docker-bake.hcl  docker-compose.yml  format.ps1  out.branchyc  run-tests-and-coverage.ps1
.cursor/plans/: branchy_formatter_4872d914.plan.md  branchy_language_rust_4d0f6b94.plan.md
examples/: api_style.branchy  big_blocks.branchy  call_with_block.branchy  char_block.branchy  escaping.branchy  events.branchy  functions.branchy  hello.branchy  inline.branchy  lib.branchy  math.branchy  mixed.branchy  mixins.branchy  mixins_include.branchy  nested.branchy  optional_param.branchy  optional_vars.branchy  showcase.branchy  snippet.branchy  strings.branchy  templates.branchy  vars.branchy  with_include.branchy
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  branchyLanguage.ts  index.css
nginx/: docker-entrypoint.sh  nginx.conf  nginx.conf.template
scripts/: fuzz_examples.sh
src/: ast.rs  binformat.rs  builtins.rs  formatter.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  resolve.rs  run.rs  server.rs
src/ast/: mod.rs  node.rs  program.rs  span.rs
src/interpreter/: eval.rs  eval_branch.rs  eval_call.rs  eval_func.rs  eval_inline.rs  eval_leaf.rs  eval_op.rs  helpers.rs  mod.rs
src/lexer/: cursor.rs  err.rs  ident.rs  legacy.rs  mod.rs  read.rs  scan.rs  scan_bracket.rs  scan_rest.rs  tests.rs  token.rs
src/parser/: char_block.rs  defs.rs  expr.rs  expr_call.rs  mod.rs  program.rs  stream.rs  tests.rs
src/resolve/: flatten.rs  mod.rs
src/server/: error.rs  handlers.rs  mod.rs  types.rs
tests/: binary.rs  char_block.rs  events.rs  fmt_check.rs  include.rs  mixins.rs  parse_errors.rs  run_basic.rs  run_builtins.rs  run_operators.rs  server_api_tests.rs  size_and_speed.rs  trace.rs
tests/common/: mod.rs
