[package]
name = "branchy"
version = "0.1.0"
edition = "2021"
default-run = "branchy"

[[bin]]
name = "branchy"
path = "src/main.rs"

[[bin]]
name = "branchy-server"
path = "src/bin/server.rs"

[dependencies]
rand = "0.8"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Web server (branchy-server binary)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
http = "0.2"

[dev-dependencies]
serde_json = "1.0"

# Code style: clippy lints (cargo clippy)
[lints.clippy]
branches = "warn"
complexity = "warn"
correctness = "warn"
deprecated = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
